--- a/poc/tekton.yaml
+++ b/poc/tekton.yaml
@@ -41,7 +41,7 @@ spec:
 apiVersion: tekton.dev/v1beta1
 kind: PipelineRun
 metadata:
-  name: clone-build-push-run-
+  name: clone-build-push-run
 spec:
   pipelineRef:
     name: clone-build-push
