--- a/poc/tekton.yaml
+++ b/poc/tekton.yaml
@@ -36,7 +36,7 @@ spec:
     workspaces:
     - name: source
       workspace: shared-data
-    - name: docker-credentials
+    - name: dockerconfig
       workspace: docker-credentials
     params:
     - name: IMAGE
